small alignment fix

--- a/src/components/Todos/TodoItem.module.css
+++ b/src/components/Todos/TodoItem.module.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
   margin: 0.5rem;
   border-bottom: 1px solid #ddd;
   padding-bottom: 1rem;
